spark 4.0.0 stuff