@@ -1,9 +1,9 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.cybercentrecanada</groupId>
-  <artifactId>spark-msgpack-datasource-3.5_2.12</artifactId>
+  <artifactId>spark-msgpack-datasource-4.0_2.13</artifactId>
   <packaging>jar</packaging>
-  <version>1.12.0-SNAPSHOT</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>spark-msgpack-datasource</name>
   <description>A spark datasource implementation for the msgpack file format.</description>
   <url>https://github.com/CybercentreCanada/spark-msgpack-datasource</url>
@@ -33,8 +33,8 @@
   </developers>
   <properties>
     <gpg.skip>true</gpg.skip>
-    <java.version>17</java.version>
-    <scala.version>2.12.18</scala.version>
+    <java.version>21</java.version>
+    <scala.version>2.13.16</scala.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
@@ -45,25 +45,25 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.12</artifactId>
-      <version>3.5.6</version>
+      <artifactId>spark-core_2.13</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.12</artifactId>
-      <version>3.5.6</version>
+      <artifactId>spark-sql_2.13</artifactId>
+      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-core_2.12</artifactId>
-      <version>3.5.6</version>
+      <artifactId>spark-core_2.13</artifactId>
+      <version>4.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_2.12</artifactId>
-      <version>3.5.6</version>
+      <artifactId>spark-sql_2.13</artifactId>
+      <version>4.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
@@ -74,15 +74,15 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-catalyst_2.12</artifactId>
-      <version>3.5.6</version>
+      <artifactId>spark-catalyst_2.13</artifactId>
+      <version>4.0.0</version>
       <scope>test</scope>
       <classifier>tests</classifier>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
-      <artifactId>scalatest_2.12</artifactId>
-      <version>3.2.18</version>
+      <artifactId>scalatest_2.13</artifactId>
+      <version>3.2.19</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -124,19 +124,6 @@
         <artifactId>scalatest-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-            --add-opens=java.base/java.io=ALL-UNNAMED
-            --add-opens=java.base/java.net=ALL-UNNAMED
-            --add-opens=java.base/java.nio=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
-            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-            --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
-            --add-opens=java.base/sun.security.action=ALL-UNNAMED
-            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</argLine>
         </configuration>
         <executions>
           <execution>
